Temporarily disable animation to prevent build error

--- a/pages/l/[permalink]/checkout.module.css
+++ b/pages/l/[permalink]/checkout.module.css
@@ -1,3 +1,5 @@
+/* Taken from gumroad */
+
 .AppWrapper {
   width: 500px;
   height: 400px;
@@ -59,11 +61,12 @@
     opacity: 1;
   }
 }
+
+/* Hack to hide the default webkit autofill */
 .FormRowInput:-webkit-autofill {
   -webkit-text-fill-color: #fce883;
-  /* Hack to hide the default webkit autofill */
   transition: background-color 100000000s;
-  animation: 1ms void-animation-out;
+  /* animation: 1ms void-animation-out; */
 }
 
 .FormRowInput {
@@ -72,7 +75,7 @@
   padding: 11px 15px 11px 0;
   color: #fff;
   background-color: transparent;
-  animation: 1ms void-animation-out;
+  /* animation: 1ms void-animation-out; */
 }
 
 .FormRowInput::placeholder {
